Delete unneccesary namespaces for direct linking error proj